substrate/frame/support/test/tests/construct_runtime_ui/both_use_and_excluded_parts.stderr
error: Unexpected tokens, expected one of `=`, `,`
  --> tests/construct_runtime_ui/both_use_and_excluded_parts.rs:43:43
   |
43 |         Pallet: pallet exclude_parts { Pallet } use_parts { Pallet },
   |                                                 ^^^^^^^^^

error[E0412]: cannot find type `RuntimeCall` in this scope
  --> tests/construct_runtime_ui/both_use_and_excluded_parts.rs:35:64
   |
35 | pub type UncheckedExtrinsic = generic::UncheckedExtrinsic<u32, RuntimeCall, Signature, ()>;
   |                                                                ^^^^^^^^^^^ not found in this scope
   |
help: you might be missing a type parameter
   |
35 | pub type UncheckedExtrinsic<RuntimeCall> = generic::UncheckedExtrinsic<u32, RuntimeCall, Signature, ()>;
   |                            +++++++++++++

error[E0412]: cannot find type `Runtime` in this scope
  --> tests/construct_runtime_ui/both_use_and_excluded_parts.rs:37:25
   |
37 | impl pallet::Config for Runtime {}
   |                         ^^^^^^^ not found in this scope
   |
help: there is an enum variant `sp_api::__private::TransactionType::Runtime`; try using the variant's enum
   |
37 - impl pallet::Config for Runtime {}
37 + impl pallet::Config for sp_api::__private::TransactionType {}
   |
